# autotoolized-lua

./: CMakeLists.txt  configure.ac
src/: CMakeLists.txt  lua.hpp  luaconf.h  luaconf.h.template.in
